# Home-Work-for-HwProj

./: Balance.c  Bubles.py  CMakeLists.txt  CODEOWNERS  DDD  Double.c  Dwoichka.c  FCV.py  Fast.c  Fast.py  Fibonachi.c  Fibonachi.sln  Fibonachi`s_figure.sln  Gnomes.c  Iuda.c  Josephus.c  Lucky.c  Luna_Ril.py  Max_Sum.sln  Nepolnoe.c  Nepolnoe2.c  New_balance.c  Ophat.c  OphatPalindrom.c  Palindrom.sln  Palindrome.c  Project1.sln  Queue.c  README.md  Reverse.c  S1inS2.c  SMG.py  Sdwig.c  Spisok.c  Station.c  Zero.c  example_usage.py  gnomes.sln  graph.py  huffman.py  (+5 more)
.github/workflows/: build-and-lint.yml  python-ci.yml  ruff.yml  test.yml  tests.yml
Coding style, linters/: design.py
Complexity of algorithms and tasks/The task of arranging queens/: Optimized.py  backtracking.py  brute_force.py  complexity.md
Introduction to git/The extended Euclidean algorithm/: Euklid.py
Python/Git1/src/: Euclid2.py
src/: Balance.c  Bubles.py  Curry.py  Fast.c  Iuda.c  Lucky.c  Reverse.c  Reverse.py  S1inS2.c  Spisok.c  Zero.c  brackets.c  calculator.c  hashtable.py  heapsort.py
tests/: CMakeLists.txt  test_brackets.c  test_calculator.c  test_hashtable.py  test_heapsort.py  test_hello.c  test_sorted_list.c
